# shareat

./: .gitignore  SPECIFICATIONS.md  docker-compose.yml
shareat-backend/: .dockerignore  .env  .env-non-dev  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
shareat-backend/actions/: create_superuser.py
shareat-backend/docker/: app.sh  create-bucket.sh
shareat-backend/migrations/: env.py
shareat-backend/migrations/versions/: 1565e5310926_add_tables_admin_client_employee.py  1687dd620f0b_initial_tables.py  432d597c1aab_add_tables_product_photo.py  4c9d1720eac6_add_tables_order_transaction_history.py  992f51423471_add_report_table.py  ac84e66bf754_add_author_column.py  d8bc460dcd4f_add_client_admin_employee_tables.py
shareat-backend/src/: routes.py
shareat-backend/src/config/: project_config.py
shareat-backend/src/controllers/: admin_controller.py  auth_controller.py  catalog_controller.py  fastapi_users.py  order_controller.py  report_controller.py  user_controller.py
shareat-backend/src/models/: __init__.py  admin.py  base_model.py  client.py  employee.py  order.py  photo.py  product.py  report.py  transaction_history.py  user.py
shareat-backend/src/report_type/: report_factory.py  report_type.py
shareat-backend/src/repositories/: sqlalchemy_repository.py
shareat-backend/src/schemas/: order_schema.py  product_schema.py  report_schema.py  user_schema.py
shareat-backend/src/services/: base_service.py  order_service.py  product_service.py  query_base_service.py  report_service.py  s3_service.py
shareat-frontend/: .eslintrc.js  (+4 more)
(+60 files in other folders)
